[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "TestToolSuite"
version = "0.0.1"
description = "A PySide6 MVVM desktop tool for ABP waveform generation via NI USB-6216 DAQmx"
readme = "README.md"
license = { text = "All rights reserved" }
authors = [
    { name = "Germano Farina" }
]
requires-python = ">=3.11"

dependencies = [
    # GUI
    "PySide6>=6.6.0",
    "qtawesome>=1.3.0",
    # Scientific / Signal processing
    "numpy>=1.26.0",
    "scipy>=1.12.0",
    # Hardware / DAQ
    "nidaqmx>=0.19.0",
    "pyusb>=1.2.1",
    # Configuration / Persistence
    "toml>=0.10.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-qt>=4.4",
    "black>=24.0",
    "ruff>=0.4.0",
    "mypy>=1.9",
]

[project.scripts]
testtoolsuite = "main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["model*", "view*", "viewmodel*", "ThreadSafeClass*"]

# ---------------------------------------------------------------------------
# Linting / Formatting
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = ["E501"]   # line-length handled by formatter

[tool.black]
line-length = 100
target-version = ["py311"]

# ---------------------------------------------------------------------------
# Type checking
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true   # nidaqmx / pyusb stubs not available

# ---------------------------------------------------------------------------
# Testing
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
qt_api = "pyside6"
